new grading programs

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -98,10 +98,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#df.loc[df.name.str[:3]=='Han']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Read the list of students\n",
     "people = pd.read_csv(folder_name + 'people.txt', header=0, sep='\\t')\n",
     "people['name'] = people['first'] + ' ' + people['last']\n",
     "people = people.drop_duplicates()\n",
+    "people = people.reset_index()\n",
     "people.columns"
    ]
   },
@@ -111,8 +121,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ALl names\n",
+    "#for i in range(people.shape[0]):\n",
+    "#    print(f\"{people.loc[i, 'first']} {people.loc[i,'last']}\", end=' | ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# A list of meetings\n",
-    "\n",
     "dfm = df.groupby(['date','meeting','name']).agg({'minutes': sum})\n",
     "dfm.minutes = 1*(dfm.minutes>10)\n",
     "dfm = dfm.groupby(['date', 'meeting']).agg({'minutes': sum}).reset_index()\n",
@@ -163,13 +183,19 @@
    "source": [
     "# Iteratively build summaries\n",
     "\n",
-    "dfs = df.groupby(['date', 'meeting', 'name']).agg({'minutes' : sum})\n",
+    "dfs = df.groupby(['date', 'meeting', 'name', 'email']).agg({'minutes' : sum})\n",
     "dfs = dfs.reset_index()                                 # Get rid of hierarchical indices\n",
     "dfs['check'] = 1*(dfs.minutes>30)                       # Participation threshold\n",
     "\n",
-    "dfs = dfs.groupby(['name','meeting']).agg({'check': sum})\n",
+    "dfs = dfs.groupby(['name', 'meeting', 'email']).agg({'check': sum})\n",
     "dfs = dfs.reset_index()\n",
-    "dfs.name = dfs.name.str.strip()                         # Remove leading and ending spaces"
+    "dfs.name = dfs.name.str.strip()                         # Remove leading and ending spaces\n",
+    "\n",
+    "# Normalize names based on the official record where email is available\n",
+    "dfs = dfs.merge(people, on='email', how='left', suffixes=['','_r'])\n",
+    "ind = dfs.email!='none'\n",
+    "dfs.loc[ind,'name'] = dfs.loc[ind,'name_r']\n",
+    "dfs = dfs.drop(columns=['name_r','index','first','last'])"
    ]
   },
   {
@@ -193,21 +219,25 @@
     "# Use a manually created list of synonims to unify spelling\n",
     "# Then look for official emails\n",
     "\n",
-    "alts = pd.read_csv(folder_name + 'alt-people.txt', header=0, sep=',')\n",
+    "alts = pd.read_csv(folder_name + 'alt-people.txt', header=0, sep=',') # A dict of alt-names\n",
     "excluded = pd.read_csv(folder_name + 'exclude.txt', header=0, sep=',')\n",
     "\n",
     "recognized = dfs.copy().merge(alts, on='name', how='left')\n",
-    "#recognized.name = recognized.name.str.replace('\\t',' ')\n",
     "\n",
+    "# Replace alt-names with real names, where alt-names were found\n",
     "ind = recognized.translation.notnull()\n",
     "recognized.loc[ind, 'name'] = recognized.loc[ind,'translation']\n",
     "\n",
+    "# Combine different copies of the same person, then re-link emails\n",
     "recognized = (recognized\n",
     "              .drop(columns='translation')                            \n",
     "              .groupby(['name','meeting']).agg({'check': sum}).reset_index()\n",
     "              .merge(people, on='name', how='left', suffixes=['', '_r'])\n",
-    "              .drop(columns=['first', 'last'])\n",
+    "              .drop(columns=['first', 'last', 'index'])\n",
     "              )\n",
+    "\n",
+    "# Sanity checks row\n",
+    "# print(alts.loc[alts.name.str[:3]=='Equ'])\n",
     "\n",
     "lost = recognized[recognized.email.isnull()]\n",
     "lost = (lost.merge(excluded, on='name', how='left', indicator=True).\n",
@@ -225,158 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('\\n'.join(lost.name.values.tolist()))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Use a manually created list of synonims to unify spelling\n",
-    "\n",
-    "lost = dfs.querya\n",
-    "\n",
-    "attempt = lost.merge(alts, on='name', how='inner') # Adds column 'translation'\n",
-    "attempt3 = attempt3[attempt3.translation.notnull()]\n",
-    "attempt3 = attempt3.merge(people[['name','email']], left_on='translation', right_on='name', suffixes=[None, '_y'])\n",
-    "attempt3 = attempt3[['name', 'email']].drop_duplicates()\n",
-    "lost = lost.merge(attempt3['name'], on='name', how='outer', indicator=True).query('_merge==\"left_only\"')\n",
-    "lost = lost.drop(columns='_merge')\n",
-    "\n",
-    "# Any records still unidentified?\n",
-    "lost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Identify those who don't have emails set, but have a reasonable name\n",
-    "\n",
-    "lost = dfs.query('email==\"none\"').copy()\n",
-    "lost['name2'] = lost.name.map(lambda s: ' '.join(s.split(' ')[:2])) # Only leave 2 first words\n",
-    "lost.name2 = lost.name2.str.title()                                 # Capitalize every word\n",
-    "lost.name = lost.name.str.title()           # Capitalize first letter of every word\n",
-    "lost = lost[['name', 'name2', 'check']]\n",
-    "\n",
-    "# Archetypical filtering operations here (3 times in a row):\n",
-    "# 1. Lookup emails\n",
-    "# 2. Remove those that were found. To avoid massive renaming and dropping columns,\n",
-    "# only look up one column (the name itself).\n",
-    "\n",
-    "attempt1 = lost.merge(people[['name', 'email']], on='name', how='inner') # Those with correct name\n",
-    "lost = lost.merge(attempt1['name'], on='name', how='outer', indicator=True, suffixes=[None, '_y']).query('_merge==\"left_only\"')\n",
-    "lost = lost.drop(columns='_merge')\n",
-    "attempt1 = attempt1[['name', 'email']].drop_duplicates()\n",
-    "\n",
-    "# Those with almost correct name (try to interpret first 2 words as a name)\n",
-    "attempt2 = lost.merge(people[['name', 'email']], left_on='name2', right_on='name', how='inner')\n",
-    "# Cannot clean it up yet, still need name2 to project back\n",
-    "lost = lost.merge(attempt2['name2'], on='name2', how='outer', indicator=True).query('_merge==\"left_only\"')\n",
-    "lost = lost[['name', 'check']]\n",
-    "attempt2 = attempt2.rename({'name_x': 'name'}, axis=1)[['name', 'email']].drop_duplicates()\n",
-    "\n",
-    "# Now refer to a manual translation table\n",
-    "alts = pd.read_csv(folder_name + 'alt-people.txt', header=0, sep=',')\n",
-    "\n",
-    "attempt3 = lost.merge(alts, on='name', how='inner') # Adds column 'translation'\n",
-    "attempt3 = attempt3[attempt3.translation.notnull()]\n",
-    "attempt3 = attempt3.merge(people[['name','email']], left_on='translation', right_on='name', suffixes=[None, '_y'])\n",
-    "attempt3 = attempt3[['name', 'email']].drop_duplicates()\n",
-    "lost = lost.merge(attempt3['name'], on='name', how='outer', indicator=True).query('_merge==\"left_only\"')\n",
-    "lost = lost.drop(columns='_merge')\n",
-    "\n",
-    "# Any records still unidentified?\n",
-    "lost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# people.name.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Meetings unidentified people attended\n",
-    "# print(df[['name','date','minutes','meeting']].merge(lost['name'], on='name'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Time to fix emails in the original dataset\n",
-    "\n",
-    "df2 = df.copy()\n",
-    "df2.name = df2.name.str.title()             # Standardize capitalization (or aliases table won't work)\n",
-    "df2.loc[df2.email=='none', 'email'] = None\n",
-    "for df_right in [attempt1, attempt2, attempt3]:    \n",
-    "    df2 = df2.merge(df_right, on='name', how='left', suffixes=[None, '_new'])    \n",
-    "    df2.loc[df2.email.isnull(), 'email'] = df2.loc[df2.email.isnull(), 'email_new']\n",
-    "    df2 = df2.drop(columns='email_new')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df2.loc[df2.name.str[:3]=='Win'].sort_values(by='date')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Summarize\n",
-    "df2 = df2.groupby(['meeting','email']).agg({'check': sum}).reset_index()\n",
-    "df2 = df2.merge(people[['email', 'name']], on='email').reset_index()\n",
-    "\n",
-    "df2 = df2[['meeting', 'name', 'email', 'check']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def obfuscate(ser):\n",
-    "    out = ser.copy()\n",
-    "    for i in range(len(out)):\n",
-    "        out[i] = 'x'*len(out[i])\n",
-    "    return out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "with pd.option_context('display.max_rows', 14000, 'display.width', 1000):\n",
-    "    df2temp = df2.copy()\n",
-    "    if hide_names:\n",
-    "        df2temp.name = obfuscate(df2temp.name)\n",
-    "        df2temp.email = obfuscate(df2temp.email)\n",
-    "    print(df2temp)\n",
+    "    print(recognized.sort_values('meeting'))\n",
     "    pass"
    ]
   },
