linear regressions - better comments

--- a/sklearn_experiments/regression.ipynb
+++ b/sklearn_experiments/regression.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -48,8 +48,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If $y = ax + ε$ where $ε \\perp x$ then multiplying by $x$ at both sides we get $yx = axx$, and thus $a = yx/xx$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,8 +90,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But $y=ax$ isn't too expressive of course; when we think about linear regression, we actually mean $y=ax+b$. Which is strictly speaking fitting with a 2D basis: $y_1 = const$ and $y_2 = x$.\n",
+    "\n",
+    "One way to deal with it is to manually remove the constants. Another way is to embrace the 2D."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -149,6 +165,8 @@
    ],
    "source": [
     "# Closed form, with inrecept fit 2D-style (matrices)\n",
+    "# At this point we can no longer use the \"/\" operator, as it would do some sort of elementwise\n",
+    "# division. We need either inv (inverse) or pinv (pseudo-inverse).\n",
     "\n",
     "xhat = np.vstack((x, np.ones(x.shape))).T\n",
     "print(xhat.shape)\n",
