google_forms processor improved

--- a/board_scheduler/biosem_forms.ipynb
+++ b/board_scheduler/biosem_forms.ipynb
@@ -41,7 +41,10 @@
     "people = people.drop_duplicates()\n",
     "people = people.reset_index()\n",
     "people['count'] = 0\n",
-    "people.columns"
+    "print(people.columns)\n",
+    "\n",
+    "alts = pd.read_csv(folder_name + 'alt_emails.csv', header=0)\n",
+    "print(alts.columns)"
    ]
   },
   {
@@ -51,9 +54,11 @@
    "outputs": [],
    "source": [
     "# Process forms\n",
+    "margin = 12 + 10/60\n",
+    "\n",
     "file_list = os.listdir(folder_name)\n",
     "print(\"Total files: \",len(file_list))\n",
-    "\n",
+    "problem_list = []\n",
     "for fname in file_list:    \n",
     "    if fname[-4:]!='xlsx':\n",
     "        continue # Ignore everything that is not a zoom log\n",
@@ -61,14 +66,29 @@
     "    fullname = folder_name + fname\n",
     "    data = pd.read_excel(fullname)\n",
     "    data.columns = ['timestamp', 'email', 'question']\n",
+    "    data['dt'] = pd.to_datetime(data.timestamp)\n",
     "    for i in range(data.shape[0]):\n",
-    "        target = data.email[i].lower().strip()\n",
-    "        if target in people.email.values:\n",
-    "            ind = np.argmax(people.email == target)\n",
-    "            #print(ind, target, people.loc[ind,'name'])\n",
-    "            people.loc[ind, 'count'] += 1\n",
-    "        else:\n",
-    "            print(f\"Problem: {target}\")"
+    "        student = data.email[i].lower().strip()\n",
+    "        if student not in people.email.values:  # Couldn't find this email right away\n",
+    "            if student in alts.email.values:    # A known alt\n",
+    "                correction = alts.loc[alts.email==student].real_email.values[0]\n",
+    "                print(student, '→', correction)\n",
+    "                student = correction\n",
+    "            else:\n",
+    "                print(f\"Problem: {student}\")\n",
+    "                if student not in problem_list: # Remember a problem and skip it\n",
+    "                    problem_list.append(student)\n",
+    "                continue\n",
+    "                \n",
+    "        ind = np.argmax(people.email == student) # Find the student\n",
+    "        if ((data.dt[i].dayofweek == 3) and \n",
+    "            (data.dt[i].hour + data.dt[i].minute/60 > margin)):\n",
+    "            print(f\"{people.loc[ind,'name']}\\t late by {data.dt[i].hour*60 - 12*60 + data.dt[i].minute} minutes\")\n",
+    "        #print(ind, student, people.loc[ind,'name'])\n",
+    "        people.loc[ind, 'count'] += 1            \n",
+    "            \n",
+    "            \n",
+    "print('---Problematic records:---\\n', '\\n'.join(problem_list), sep='')"
    ]
   },
   {
