grade calculators - finished for now

--- a/board_scheduler/biosem_forms.ipynb
+++ b/board_scheduler/biosem_forms.ipynb
@@ -72,12 +72,13 @@
     "        if student not in people.email.values:  # Couldn't find this email right away\n",
     "            if student in alts.email.values:    # A known alt\n",
     "                correction = alts.loc[alts.email==student].real_email.values[0]\n",
-    "                print(student, '→', correction)\n",
+    "                # print(student, '→', correction)\n",
     "                student = correction\n",
     "            else:\n",
     "                print(f\"Problem: {student}\")\n",
     "                if student not in problem_list: # Remember a problem and skip it\n",
-    "                    problem_list.append(student)\n",
+    "                    # problem_list.append(student)\n",
+    "                    pass\n",
     "                continue\n",
     "                \n",
     "        ind = np.argmax(people.email == student) # Find the student\n",
@@ -97,7 +98,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "people.query('count>0')"
+    "answer = people.query('count>0')\n",
+    "# answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read the attendance chart, mix, and print it together\n",
+    "attendance = pd.read_csv(folder_name + 'attendance_summary.csv')\n",
+    "# print(attendance.columns)\n",
+    "\n",
+    "out = (answer.\n",
+    "       merge(attendance[['email','check']], how='left', on='email', suffixes=[None,None]).\n",
+    "       drop(columns=['index']).\n",
+    "       rename({'count':'questions', 'check':'attended'}, axis=1).\n",
+    "       sort_values(by='name')\n",
+    "      )\n",
+    "\n",
+    "out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A piece to copy in \"Fails\":\n",
+    "\n",
+    "> but submitted only 1 pre-seminar question out of 12. For now I'm marking it as an \"F\". If you want to write a short (~2 pages) collection of loosely connected paragraphs, reflecting on 4-5 things that you learned from this seminar series; things that seemed important and intersting to you personally, and taken from different talks, not from one talk, let me know! If you send this text to me any time before March or so, and if it's reasonably good, I'll change the grade to a \"Pass\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(out.shape[0]):\n",
+    "    attended = max([out.attended[i], out.questions[i]]) # No idea where these    \n",
+    "    questions = min(out.questions[i], 12)\n",
+    "    if attended >= 10 and questions >= 10:\n",
+    "        conclusion = 'which is a Pass!'\n",
+    "    else:\n",
+    "        conclusion = ('which should technically be an \"F\", but ok, last semester was weird, '+\n",
+    "                      'let\\'s call it a \"Pass\" this one time.')\n",
+    "    if attended==13:\n",
+    "        attended = 'all 13'\n",
+    "    else:\n",
+    "        attended = str(attended) + '/13'\n",
+    "    print(f\"{out['last'][i]}:\\nDear {out['first'][i]}, you attended {attended} seminars, and submitted \" + \n",
+    "          f\"{questions}/12 pre-seminar questions, {conclusion}\\n\")"
    ]
   }
  ],
