--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -98,6 +98,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Check individual records of needed\n",
     "#df.loc[df.name.str[:3]=='Han']"
    ]
   },
@@ -258,6 +259,16 @@
     "with pd.option_context('display.max_rows', 14000, 'display.width', 1000):\n",
     "    print(recognized.sort_values('meeting'))\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ouput the summary csv\n",
+    "recognized.to_csv(folder_name + '../attendance_summary.csv', index=False)"
    ]
   },
   {
