zoom grader: fixed foreign email mistake

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -153,7 +153,10 @@
    "outputs": [],
    "source": [
     "# Looking at attendance of selected students\n",
-    "# df.loc[df.name.str[:3]=='Ser'].sort_values(by='date')"
+    "key = 'Dan'\n",
+    "res = df.loc[df.name.str[:len(key)]==key].sort_values(by='date')\n",
+    "print(res.shape[0], 'rows')\n",
+    "res"
    ]
   },
   {
@@ -188,15 +191,15 @@
     "dfs = dfs.reset_index()                                 # Get rid of hierarchical indices\n",
     "dfs['check'] = 1*(dfs.minutes>30)                       # Participation threshold\n",
     "\n",
-    "dfs = dfs.groupby(['name', 'meeting', 'email']).agg({'check': sum})\n",
-    "dfs = dfs.reset_index()\n",
+    "dfs = dfs.groupby(['name', 'meeting', 'email']).agg({'check': sum}).reset_index()\n",
     "dfs.name = dfs.name.str.strip()                         # Remove leading and ending spaces\n",
     "\n",
     "# Normalize names based on the official record where email is available\n",
     "dfs = dfs.merge(people, on='email', how='left', suffixes=['','_r'])\n",
-    "ind = dfs.email!='none'\n",
+    "ind = (dfs.email != 'none') & (dfs.name_r.notna())\n",
     "dfs.loc[ind,'name'] = dfs.loc[ind,'name_r']\n",
-    "dfs = dfs.drop(columns=['name_r','index','first','last'])"
+    "dfs = dfs.drop(columns=['name_r','index','first','last'])\n",
+    "# print(dfs.loc[dfs.name.str[:3]=='Dan'])"
    ]
   },
   {
@@ -207,7 +210,7 @@
    "source": [
     "with pd.option_context('display.max_rows', 1400, 'display.width', 1000):\n",
     "    if not hide_names:\n",
-    "        #print(dfs)\n",
+    "        # print(dfs)\n",
     "        pass"
    ]
   },
@@ -253,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "with pd.option_context('display.max_rows', 14000, 'display.width', 1000):\n",
