tuples and zipping tests

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -153,7 +153,7 @@
    "outputs": [],
    "source": [
     "# Looking at attendance of selected students\n",
-    "key = 'Dan'\n",
+    "key = 'Ako'\n",
     "res = df.loc[df.name.str[:len(key)]==key].sort_values(by='date')\n",
     "print(res.shape[0], 'rows')\n",
     "res"
