--- a/learning_python/comprehensions.ipynb
+++ b/learning_python/comprehensions.ipynb
@@ -4,7 +4,96 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# More experiments with list comprehensions\n",
+    "# Lists and list comprehensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Basic lists\n",
+    "\n",
+    "Based on: https://github.com/chiphuyen/python-is-cool"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [1,3,5,7,8]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8, 7, 5, 3, 1]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reverse\n",
+    "a[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 111, 5, 7, 8]\n",
+      "[1, 3, 111, 0, 0, 0, 5, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add stuff in the middle\n",
+    "a = [1,3,5,7,8]\n",
+    "a[2:2] = [111]      # This [] around the element is important\n",
+    "print(a)\n",
+    "\n",
+    "a[3:3] = [0,0,0]    # Can insert more than 1 element\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Flattening\n",
+    "a = [[1], [2], [3,3]]\n",
+    "print(sum(a, []))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Comprehensions\n",
     "\n",
     "`[expression for item in list if condition]`"
    ]
@@ -24,6 +113,75 @@
    ],
    "source": [
     "print([a+10*a for a in range(10) if (a%3 != 0)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 1, 4, 2]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Looking for a simple one-liner to list all elements within values\n",
+    "g = {1:[0,2], 2:[1,4], 3:[], 4:[2]}\n",
+    "[k for i,j in g.items() for k in j]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 2, 1, 4, 2]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([v for i,v in g.items()], [])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So both work, and I'm not sure whieh one is more clear."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 1), (1, 2), (2, 4)}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set([tuple(sorted([i,j])) for i,v in g.items() for j in v])"
    ]
   },
   {
@@ -105,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
