--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -1,123 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n",
-      "(0, 1)\n",
-      "3\n"
-     ]
-    }
-   ],
    "source": [
-    "for a in [[], (0,1), 3]:\n",
-    "    print(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[0, 1]], [[2, 3]], [[4, 5]], [[6, 7]], [[8, 9]], [[10, 11]]]\n",
-      "[[0, 1], [2, 3], [4, 5], [6, 7], [8, 9], [10, 11]]\n",
-      "[[0, 1], [2, 3], [4, 5], [6, 7], [8, 9], [10, 11]]\n",
-      "[(0, 1), (2, 3), (4, 5), (6, 7), (8, 9), (10, 11)]\n",
-      "[[0, 1], [2, 3], [4, 5], [6, 7], [8, 9], [10, 11]]\n",
-      "[[0, 1], [2, 3], [4, 5], [6, 7], [8, 9], [10, 11]]\n",
-      "[[0, 1], [2, 3], [4, 5], [6, 7], [8, 9], [10, 11]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = list(range(12))\n",
-    "print([[a[i:i+2]] for i in range(0,len(a),2)])\n",
-    "print([a[2*i:2*i+2] for i in range(len(a)//2)])\n",
-    "print([[a[2*i],a[2*i+1]] for i in range(len(a)//2)])\n",
-    "print(list(zip(a[::2], a[1::2]))) # Tuples not lists inside\n",
-    "print([a[i:i+2] for i in [2*j for j in range(len(a)//2)]])\n",
-    "print((lambda f: lambda g:f(f,g))(lambda f,x: [] if not x else [x[:2]]+f(f,x[2:]))(a))\n",
-    "print([[a.pop(0),a.pop(0)] for i in range(len(a)//2)]) # Destroys a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "too many values to unpack (expected 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-7-f4154cfa8df1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'a='\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'b='\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: too many values to unpack (expected 2)"
-     ]
-    }
-   ],
-   "source": [
-    "(a,b) = (0,1)\n",
-    "print('a=',a)\n",
-    "print('b=',b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-15-f793b5abcab0>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-15-f793b5abcab0>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    for key,value in dictionary.items():\u001b[0m\n\u001b[1;37m                                        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
-   "source": [
-    "for key,value in dictionary.items():\n",
-    "    # do whatever"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_items([(1, 'dog'), ('cat', 444)])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "d = {1:'dog', 'cat': 444}\n",
-    "d.items()"
+    "* binary search\n",
+    "* simple sortings"
    ]
   },
   {
@@ -126,116 +14,32 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 loves 2\n",
-      "3 loves 4\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable int object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-12-f685227dbfcf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfor\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m \u001b[1;32min\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m666\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'loves'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable int object"
-     ]
+     "data": {
+      "text/plain": [
+       "[['a', 'b', 'c'],\n",
+       " ['a', 'c', 'b'],\n",
+       " ['b', 'a', 'c'],\n",
+       " ['b', 'c', 'a'],\n",
+       " ['c', 'a', 'b'],\n",
+       " ['c', 'b', 'a']]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for a,b in [(1,2), (3,4), 666]:\n",
-    "    print(a, 'loves', b)"
+    "def permute(x):\n",
+    "    if len(x)==0: return [[]]\n",
+    "    return [[x[i]] + y for i in range(len(x)) for y in permute(x[:i] + x[i+1:])]\n",
+    "\n",
+    "permute('abc')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[4 5 6]\n",
-      "[4 5 6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.array([[1,2,3],[4,5,6]])\n",
-    "print(a[1])\n",
-    "print(a[1,:])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -244,67 +48,88 @@
        "['abc', 'acb', 'bac', 'bca', 'cab', 'cba']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def permute(chars):\n",
-    "    if len(chars)==1: return [chars]\n",
-    "    return [chars[i]+b for i in range(len(chars)) for b in permute(chars[:i] + chars[(i+1):])]\n",
+    "def permute(x):\n",
+    "    if len(x)==0: return ['']\n",
+    "    return [x[i] + y for i in range(len(x)) for y in permute(x[:i] + x[i+1:])]\n",
     "\n",
     "permute('abc')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aaa', 'aab', 'aac', 'aba', 'abb', 'abc', 'aca', 'acb', 'acc', 'baa', 'bab', 'bac', 'bba', 'bbb', 'bbc', 'bca', 'bcb', 'bcc', 'caa', 'cab', 'cac', 'cba', 'cbb', 'cbc', 'cca', 'ccb', 'ccc']\n"
+     ]
+    }
+   ],
+   "source": [
+    "def combine(x, l=None):\n",
+    "    if l is None: l = len(x)\n",
+    "    if l==0: return ['']\n",
+    "    return [a + b for a in x for b in combine(x, l-1)]\n",
+    "\n",
+    "print(combine('abc'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(not [])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['aaa',\n",
-       " 'aab',\n",
-       " 'aac',\n",
-       " 'aba',\n",
-       " 'abb',\n",
-       " 'abc',\n",
-       " 'aca',\n",
-       " 'acb',\n",
-       " 'acc',\n",
-       " 'baa',\n",
-       " 'bab',\n",
-       " 'bac',\n",
-       " 'bba',\n",
-       " 'bbb',\n",
-       " 'bbc',\n",
-       " 'bca',\n",
-       " 'bcb',\n",
-       " 'bcc',\n",
-       " 'caa',\n",
-       " 'cab',\n",
-       " 'cac',\n",
-       " 'cba',\n",
-       " 'cbb',\n",
-       " 'cbc',\n",
-       " 'cca',\n",
-       " 'ccb',\n",
-       " 'ccc']"
+       "['abc', 'acb', 'bac', 'bca', 'cab', 'cba']"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def combine(chars, k=3):\n",
-    "    \"\"\"Pemute these chars\"\"\"\n",
-    "    return [a+b for a in combine(chars, k-1) for b in chars] if k else ['']\n",
+    "def permute(x):\n",
+    "    queue = [('',x)]\n",
+    "    out = []\n",
+    "    while queue:\n",
+    "        pre,post = queue.pop(0)\n",
+    "        if len(post)==1:\n",
+    "            out.append(pre+post)\n",
+    "        else:\n",
+    "            for i in range(len(post)):\n",
+    "                queue.append((pre+post[i], post[:i]+post[i+1:]))\n",
+    "    return out\n",
     "\n",
-    "combine(['a','b','c'], 3)"
+    "permute('abc')"
    ]
   }
  ],
