tiny network experiment

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "* binary search\n",
-    "* simple sortings"
+    "* simple sortings\n",
+    "* hashmap chaining\n",
+    "* hashmap quadratic probing"
    ]
   },
   {
