updating zoom grader

--- a/board_scheduler/zoom_grader_2020.ipynb
+++ b/board_scheduler/zoom_grader_2020.ipynb
@@ -10,29 +10,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plan:\n",
-    "\n",
-    "1. Load data from BIP\n",
-    "1. Process Zoom logs, ignore repetitions, summarize\n",
-    "1. Filter only one class\n",
-    "1. Read the actual list of students (separate for every class)\n",
-    "1. Use a substitutition table \"name --> email\" (separate file, one for all classes) to either substitute entries, or disable entries (special \"command\" for making it ignore an entry)\n",
-    "1. Using email as id, connect two databases. Output summary, as well as a list of failed entries (present on Zoom, but absent on BIP).\n",
-    "\n",
-    "Piazza grader:\n",
-    "\n",
-    "1. Load a list of Piazza people\n",
-    "2. Go through saved Piazza contributions, tabulate participation\n",
-    "3. Read attendance summary from part 1 (above)\n",
-    "4. Output a full table (screen & csv)"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,6 +20,16 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hide_names = 0\n",
+    "# Set this global var to 1 before pushing to git (preserves anonymity)"
    ]
   },
   {
@@ -58,25 +47,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read attendance data\n",
+    "# Read all attendance data\n",
     "\n",
     "df = pd.DataFrame()\n",
+    "\n",
     "file_list = os.listdir(folder_name)\n",
     "print(\"Total files: \",len(file_list))\n",
     "\n",
-    "processed_list = set()\n",
-    "for fname in file_list:    \n",
+    "for fname in file_list:\n",
+    "    # print(fname)\n",
     "    if fname[-3:]!='csv':\n",
     "        continue # Ignore everything that is not a zoom log\n",
     "    fullname = folder_name + fname\n",
     "    header = pd.read_csv(fullname, header=0, nrows=1)\n",
     "    name = header['Topic'][0]\n",
     "    datestring = header['Start Time'][0][:10]\n",
-    "    # print(name, datestring)\n",
-    "    if name+datestring in processed_list:\n",
-    "        print('Duplicated meeting:', name+datestring, fname)\n",
-    "        continue  # This meeting\n",
-    "    processed_list.add(name+datestring)\n",
+    "    # print(fname, header['Start Time'].values)    \n",
     "    \n",
     "    data = pd.read_csv(fullname, header=2)\n",
     "    data['Date'] = datestring\n",
@@ -92,67 +78,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Rename fields, standardize meetings that had synonyms\n",
-    "\n",
     "df= df.rename({'User Email': 'email', \n",
     "               'Total Duration (Minutes)': 'minutes', \n",
     "               'Name (Original Name)': 'name',\n",
     "               'Meeting':'meeting',\n",
     "               'Date':'date'}, axis=1)\n",
-    "meeting_dict = {'Biosem Zoom': 'Biosem', \n",
-    "                'Biosem_spring_2021': \"Biosem\"}\n",
+    "meeting_dict = {'Neuro Lab - Sep 10': 'Neuro', \n",
+    "                \"Arseny Khakhalin's Zoom Meeting\": 'Neuro', \n",
+    "                \"Intro Neuro\": 'Neuro',\n",
+    "                'Biosem 00': 'Biosem', 'Bard Biosem': 'Biosem'}\n",
     "df['meeting'] = df['meeting'].replace(meeting_dict)\n",
-    "df.name = df.name.str.title()  # Capitalize names (for consistency)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Inexplicably, some total participation counts are stored as strings, not numbers\n",
-    "\n",
-    "df.loc[df.minutes=='Yes'] = 0 # No idea what it means, but Zoom outputed it!!!\n",
-    "ind = [type(a)!=int for a in df.minutes.values]\n",
-    "df.loc[ind, 'minutes'] = [int(a) for a in df.loc[ind].minutes.values]\n",
-    "df = df[df.minutes>0]  # Remove weird empty entries\n",
-    "\n",
-    "df['check'] = 1*(df.minutes>40)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# What meetings are even there?\n",
-    "set(df.meeting)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.figure(figsize=(10,3))\n",
-    "plt.subplot(121)\n",
-    "plt.hist(df.loc[df.meeting=='Biosem'].minutes.values, bins=50);\n",
-    "plt.title('Biosem');\n",
-    "plt.subplot(122)\n",
-    "plt.hist(df.loc[df.meeting=='Neuroscience'].minutes.values, bins=50);\n",
-    "plt.title('Neuro');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Only analyze one meeting starting from here"
+    "df.name = df.name.str.title() # Capitalize (for consistency)\n",
+    "df['check'] = 1*(df.minutes>30)"
    ]
   },
   {
@@ -162,7 +99,7 @@
    "outputs": [],
    "source": [
     "# Check individual records of needed\n",
-    "# df.loc[df.name.str[:3]=='Fen']"
+    "#df.loc[df.name.str[:3]=='Han']"
    ]
   },
   {
@@ -177,6 +114,17 @@
     "people = people.drop_duplicates()\n",
     "people = people.reset_index()\n",
     "people.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ALl names\n",
+    "#for i in range(people.shape[0]):\n",
+    "#    print(f\"{people.loc[i, 'first']} {people.loc[i,'last']}\", end=' | ')"
    ]
   },
   {
@@ -261,7 +209,9 @@
    "outputs": [],
    "source": [
     "with pd.option_context('display.max_rows', 1400, 'display.width', 1000):\n",
-    "    print(dfs)    "
+    "    if not hide_names:\n",
+    "        # print(dfs)\n",
+    "        pass"
    ]
   },
   {
@@ -299,7 +249,8 @@
     "        drop(columns=['_merge','email']))\n",
     "\n",
     "with pd.option_context('display.max_rows', 1400, 'display.width', 1000):\n",
-    "    print(lost)"
+    "    if not hide_names:        \n",
+    "        print(lost)"
    ]
   },
   {
