functional piazza processor

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -54,14 +54,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total files:  16\n"
+      "Total files:  17\n",
+      "Meeting files: 14\n"
      ]
     }
    ],
@@ -73,12 +74,14 @@
     "print(\"Total files: \",len(file_list))\n",
     "\n",
     "processed_list = set()\n",
-    "for fname in file_list:    \n",
+    "for fname in file_list:\n",
     "    if fname[-3:]!='csv':\n",
     "        continue # Ignore everything that is not a zoom log\n",
     "    fullname = folder_name + fname\n",
-    "    header = pd.read_csv(fullname, header=0, nrows=1)\n",
-    "    name = header['Topic'][0]\n",
+    "    header = pd.read_csv(fullname, header=0, nrows=1) # Attempt to read the header\n",
+    "    if 'Topic' not in header.columns: # Not a zoom log, skip this one\n",
+    "        continue\n",
+    "    name = header['Topic'][0]    \n",
     "    datestring = header['Start Time'][0][:10]\n",
     "    # print(name, datestring)\n",
     "    if name+datestring in processed_list:\n",
@@ -91,12 +94,14 @@
     "    data['Meeting'] = name\n",
     "    data['User Email'] = data['User Email'].fillna('none') # NaNs are ignored by aggregation below\n",
     "    \n",
-    "    df = df.append(data, ignore_index=True)"
+    "    df = df.append(data, ignore_index=True)\n",
+    "\n",
+    "print('Meeting files:', len(processed_list))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +147,7 @@
        "{'Biosem', 'Computational Neuro', 'Neuro'}"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +224,7 @@
    "source": [
     "# Read the actual list of students. Note that the file name needs to match the meeting name.\n",
     "\n",
-    "people = pd.read_csv(folder_name + target_meeting + '.txt', header=0, sep=',')\n",
+    "people = pd.read_csv(folder_name + target_meeting + '.csv', header=0, sep=',')\n",
     "people.columns = [' '.join(s.split()) for s in people.columns] # Remove repeating spaces, just in case\n",
     "# print(people.columns)\n",
     "people['name'] = people['FIRST NAME'] + ' ' + people['LAST NAME']\n",
@@ -235,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -313,13 +318,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read and process known alts\n",
     "\n",
-    "df_alts = pd.read_csv(folder_name + 'alts.txt', header=0, sep=',')\n",
+    "df_alts = pd.read_csv(folder_name + 'alts.csv', header=0, sep=',')\n",
     "\n",
     "# First find official emails where available, and drop some users manually (e.g. the instructor)\n",
     "df_fixed = (df\n",
@@ -345,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,8 +367,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2: Piazza grader"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read all students enrolled on Piazza, with their Piazza names\n",
+    "# Here make sure the list has only 1 email, and this email is correct. Some people like to include\n",
+    "# more than one email for some reason...\n",
+    "\n",
+    "people_piazza = pd.DataFrame(columns=['name', 'email'])\n",
+    "lines = open(folder_name + 'Piazza.list', 'r', encoding='utf-8').readlines()\n",
+    "for line in lines:\n",
+    "    l = line.strip().split(' ')\n",
+    "    email = l[-1]\n",
+    "    name = ' '.join(l[:-1])\n",
+    "    if name != '': # Ignore unregistered users\n",
+    "        people_piazza = people_piazza.append({'name': name, 'email': email}, ignore_index=True)\n",
+    "        \n",
+    "# people_piazza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.txt : Week 1: Intro & Resting membrane potential\n",
+      "2.txt : Week 2: action potential\n",
+      "3.txt : Week 3: Synapses, Connectomics, some Free Will\n",
+      "4.txt : Week 4: Ethology, Inhibition, Integration\n",
+      "lab2.txt : Lab 2: Eyewire\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read all piazza pages. All of them should be saved as txt files.\n",
+    "# NOTE: There's no safety check on the content of TXT files, so no other TXT files are allowed in this folder!\n",
+    "\n",
+    "df_piazza = pd.DataFrame(columns=['name','work'])\n",
+    "file_list = os.listdir(folder_name)\n",
+    "for fname in file_list:\n",
+    "    if fname[-3:]!='txt':\n",
+    "        continue # Ignore everything that is not a zoom log    \n",
+    "    s = open(folder_name + fname, 'r', encoding='utf-8').read()\n",
+    "    title = s[:s.find('\\n')]\n",
+    "    print(fname, ':', title)\n",
+    "    for name in people_piazza.name:\n",
+    "        if name in s:\n",
+    "            df_piazza = df_piazza.append({'name': name, 'work':title}, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now summarize, then merge left on the full list of people\n",
+    "\n",
+    "dfsp = (df_piazza        \n",
+    "        .groupby(['name'])\n",
+    "        .agg('count')\n",
+    "        .reset_index()\n",
+    "       )\n",
+    "dfsp = (people_piazza\n",
+    "        .merge(dfsp, on='name', how='left')\n",
+    "       )\n",
+    "dfsp.loc[dfsp.work.isna(),'work'] = 0\n",
+    "dfsp.work = dfsp.work.astype(int)\n",
+    "\n",
+    "# dfsp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {
     "scrolled": false
    },
@@ -372,13 +462,13 @@
     "# For giant outputs\n",
     "\n",
     "with pd.option_context('display.max_rows', 14000, 'display.width', 1000):\n",
-    "    #print(dfs.sort_values('meeting'))\n",
+    "    #print(dfsp.merge(dfs, on='email'))\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
