zoom+piazza grader: final form

--- a/board_scheduler/zoom_grader.ipynb
+++ b/board_scheduler/zoom_grader.ipynb
@@ -453,17 +453,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 108,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "# For giant outputs\n",
+    "# Full output\n",
     "\n",
+    "df_full = dfsp.merge(dfs, on='email', suffixes=['_piazza','_zoom'])\n",
     "with pd.option_context('display.max_rows', 14000, 'display.width', 1000):\n",
-    "    #print(dfsp.merge(dfs, on='email'))\n",
+    "    # print(df_full)\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Can miss classes, and still pass: 6.800000000000001\n",
+      "Can miss classes, and still get a B: 3.4000000000000004\n",
+      "Can miss homeworks, and still pass: 4.2\n",
+      "Can miss homeworks, and still get a B: 2.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How many missed assignments are problematic?\n",
+    "\n",
+    "print('Can miss classes, and still pass:', 0.2*34)\n",
+    "print('Can miss classes, and still get a B:', 0.1*34)\n",
+    "print('Can miss homeworks, and still pass:', 0.2*21)\n",
+    "print('Can miss homeworks, and still get a B:', 0.1*21)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# At-risk students\n",
+    "\n",
+    "classes_so_far = 9\n",
+    "works_so_far = 5\n",
+    "df_at_risk = df_full.query('work < @works_so_far-1 | check < @classes_so_far-3')\n",
+    "\n",
+    "#print(','.join([e for e in df_at_risk.email]))\n",
+    "#df_at_risk"
    ]
   },
   {
