new fancier zoomgrader

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -12,6 +12,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 dog\n",
+      "1 cat\n",
+      "2 mouser\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ['dog','cat','mouser']\n",
+    "for i,v in enumerate(a):\n",
+    "    print(i,v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 a leg\n",
+      "1 b egg\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {'a': 'leg', 'b': 'egg'}\n",
+    "for i,(key,value) in enumerate(a.items()):\n",
+    "    print(i,key,value)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
